# catbase

./: .gitignore  LICENSE  README.md
poc/: CHANGELOG.md  catbase-poc.cabal
poc/app/: Main.hs
poc/src/: Hask.hs
poc/src/Control/: Category.hs  Functor.hs
poc/src/Control/Category/: Hask.hs
poc/src/Data/: Num.hs
poc/src/Hask/Types/: Int.hs
poc/src/Prelude/: Catbase.hs
